--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -15,7 +15,7 @@ body{
 
 
 nav{
-	height: 40px;
+	height: 45px;
 	
 	
 }
@@ -35,19 +35,21 @@ ul{
 
 .bar1{
 	width: 30px;
-	height: 3px;
+	height: 2px;
 	background-color: white;
 	margin: 5px;
 	padding: 0px;
+	transform: translateY(8px);
 
 	}
 	.bar2{
 	width: 30px;
-	height: 3px;
+	height: 2px;
 	background-color: white;
 	margin: 5px;
 	padding: 0px;
 	transform: rotate(90deg);
+
 	}
 	
 	ul li a{
@@ -62,16 +64,16 @@ ul{
 	}
 	ul li a:hover{
 		color: #CCFF00;
-		-webkit-text-stroke : 1px white;
+		-webkit-text-stroke : 1px #CCFF00;
 		transition: 0.5s;
 	}
 	
 	.hamburger-menu{
 			position: absolute;
 			cursor: pointer;
-			top: 3.5%;
+			top: 1.5%;
 			right: 2%;
-			transform: translate(35%, -50%);
+			transform: translate(35%, -2%);
 			z-index: 11;
 			margin: auto;
 			padding: 0px;
@@ -95,10 +97,12 @@ ul{
 			align-items: center;
 			justify-content: center;
 			flex-flow: column-reverse;
+		
 		}
-		li a:hover:not(.current-link){
+
+		/*li a:hover:not(.current-link){
     	background-color: #000000;
-}
+		}*/
 
 .logo a{
 	color: white;
@@ -107,7 +111,7 @@ ul{
     list-style-type: none;
     font-size: 20px;
     font-family: Lato;
-    padding: 10px;
+    padding: 0px;
     display: flex;
     z-index: 13;
     /*position: fixed;*/
@@ -115,7 +119,14 @@ ul{
 
 }
 .logo{
-	padding: 0px;
+	width: 55px;
+	height: auto;
+	padding: 5px 5px 0px 5px;
+}
+.logo-img{
+	width: 55px;
+	height: auto;
+
 }
 
 a{
@@ -123,10 +134,10 @@ a{
 	color: #000000;
 }
 
-.logo a:hover{
+/*.logo a:hover{
  	background-color: #CCFF00;
  
- }
+ }*/
 
 
 
@@ -159,7 +170,7 @@ a{
 }
 .blog-title:hover{
 	-webkit-text-fill-color: white;
-	/*-webkit-text-stroke-width: 1px;*/
+	-webkit-text-stroke-width: 1px;
 	-webkit-background-clip: text;
 	/*background-image: linear-gradient(45deg, yellow, green);*/
 }
@@ -257,14 +268,15 @@ article{
 	padding: 15px 0px 5px 15px;
 }
 
-.grid-container{
+/*.grid-container{
 	
 
 
-}
+}*/
 .column{
 	flex: 50%;
 	padding: 5px;
+	
 }
 .row {
 	display: flex;
@@ -325,10 +337,9 @@ h2{
 }
 img{
     display: block;
-	margin-right: auto;
-	margin-left: auto;
-	width: 455px;
-	height: 750px;
+	margin: auto;
+	width: auto;
+	height: auto;
 
 }
 
@@ -381,20 +392,20 @@ h3{
   	text-align: right;
 }
 .and-sign{
-	font-size: 350px;
+	font-size: 500px;
 	font-weight: bolder;
 	font-family: Lato;
 	color: transparent;
     -webkit-text-stroke: 1.5px #CCFF00;
 	text-align: left;
-	padding: 130px 20px 20px 50px;
+	padding: 0px 20px 20px 50px;
 	transform: rotate(-12deg);
 }
 .paragraph-home{
-	font-size: 22px;
+	font-size: 20px;
     font-family: Lato;
     float: right;
-    padding: 110px 350px 0px 140px;
+    padding: 60px 350px 0px 35px;
 }
 
 .here-title{
@@ -416,73 +427,152 @@ h3{
     flex: 1 1 auto;
  }
 
+.project-title{
+	font-weight: bold;
+	font-family: Lato;
+	font-size: 80px;
+	text-align: center;
+	color: white;
+	padding-top: 20px;
+}
 .column-container-contact{
     display: flex;
 
  }
- 
-.project-title{
-	font-weight: bold;
-	font-family: Lato;
-	font-size: 100px;
-	text-align: center;
-	color: white;
-	padding-top: 70px;
-}
 .contact-section{
-     font-size: 280px;
+     font-size: 275px;
     font-weight: bolder;
     font-family: Pincoyablack;
     text-align: center;
-    padding: 275px 0px 150px 5px;
+    padding: 200px 0px 200px 5px;
     background: linear-gradient(to bottom, #D0FB21, #9AFA12, #39EE04);
     background-repeat: no-repeat;
     background-size: cover;
     color: black;
 }
+
+
+.box{
+    display: flex;
+	justify-content: center;
+}
+
+
 .social-twitter{
     font-size: 16px;
     font-family: Lato;
-    padding: 10px 150px 15px 150px;
+   	padding: 0px 20px 20px 20px;
      font-weight: bold;
-     flex: 1 1 auto;
      color: white;
+	
 
 }
 
 .social-behance{
     font-size: 16px;
     font-family: Lato;
-    padding: 10px 150px 15px 150px;
+    padding: 0px 20px 20px 20px;
      font-weight: bold;
-     flex: 1 1 auto;
       color: black;
+
 
 }
 
 .social-email{
     font-size: 16px;
     font-family: Lato;
-    padding: 20px 150px 15px 150px;
+    padding: 0px 20px 20px 20px;
     font-weight: bold;
-    flex: 1 1 auto;
     color: black;
+	
 
 }
+#grid-container{
+	display: grid;
+	width: 100%;
+	height: 100%;
+	padding: 20px;
+	position: relative;
+	grid-template-columns: repeat(12, 8.3%);
+    grid-template-rows: repeat(20, 5%);
 
-.box{
+}
+/*.content{
     display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: calc(100vh - 13rem);
+    position: relative;
     align-items: center;
+    justify-content: center;
+    max-height: 300px;
+}*/
+.grid-item{
+	position: relative;
 }
+.grid-item-img{
+	position: relative;
+	width: 100%;
+	height: 100%;
+	background-size: cover;
+	background-position: 50% 50%;
 
-
-
-
-
-
-
-
-
+}
+.a{
+	grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 4;
+}
+.b{
+	grid-column-start: 7;
+	grid-column-end: 12;
+	grid-row-start: 1;
+	grid-row-end: 4;
+}
+.c{
+	grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 6;
+    grid-row-end: 8;
+}
+.d{
+	grid-column-start: 6;
+    grid-column-end: 9;
+    grid-row-start: 7;
+    grid-row-end: 9;
+}
+.e{
+	
+    grid-column-start: 8;
+    grid-column-end: 12;
+    grid-row-start: 6;
+    grid-row-end: 8;
+}
+.f{
+	grid-column-start: 1;
+	grid-column-end: 4;
+	grid-row-start: 10;
+	grid-row-end:13 ;
+}
+.g{
+	grid-column-start: 6;
+    grid-column-end: 12;
+    grid-row-start: 11;
+    grid-row-end: 13;
+}
+.h{
+	grid-column-start: 1;
+    grid-column-end:7;
+    grid-row-start:15;
+    grid-row-end: 20;
+}
+.i{
+	grid-column-start: 9;
+	grid-column-end: 12;
+	grid-row-start:15 ;
+	grid-row-end: 20;
+}
 
 
 /*Moblie*/
@@ -505,14 +595,23 @@ h3{
 		
 	}
 
-.bar{
-	width: 30px;
-	height: 3px;
-	background-color: #FFFFFF;
-	margin: 5px;
-	padding: 0px;
-
-	}
+	.bar1{
+		width: 30px;
+		height: 2px;
+		background-color: white;
+		margin: 5px;
+		padding: 0px;
+		transform: translateY(8px);
+	
+		}
+		.bar2{
+		width: 30px;
+		height: 2px;
+		background-color: white;
+		margin: 5px;
+		padding: 0px;
+		transform: rotate(90deg);
+		}
 		
 
 	ul li a{
@@ -525,14 +624,14 @@ h3{
 	}
 	ul li a:hover{
 		color: #CCFF00;
-		-webkit-text-stroke : 1px white;
+		-webkit-text-stroke : 1px #CCFF00;
 		transition: 0.5s;
 	}
 	
 	.hamburger-menu{
 			position: absolute;
 			cursor: pointer;
-			top: 50%;
+			top: 45%;
 			right: 6%;
 			transform: translate(35%, -50%);
 			z-index: 11;
@@ -561,6 +660,18 @@ h3{
 		}
 		li a:hover:not(.current-link){
     	background-color: black;
+}
+.logo{
+	width: 50px;
+	height: auto;
+	padding: 0px;
+	
+}
+.logo-img{
+	width: 50px;
+	height: auto;
+	padding: 0px;
+	
 }
 /*Blog Page Section*/
 .line{
@@ -636,10 +747,10 @@ article{
 	color: #000000;
 	font-family: Lato;
 	font-weight: bold;
-	font-size: 60px;
+	font-size: 40px;
 	text-align: left;
-	margin-left: 30px;
-	margin-right: 30px;
+	margin-left: 0px;
+	margin-right: 0px;
 	padding: 15px 0px 15px 0px;
 }
 .subtitle{
@@ -770,10 +881,143 @@ h3{
     font-size: 15px;
 }
 .image-mock{
-	height: 690px;
+	height: 200px;
 	background-color: grey;
 	padding: 0px;
 }
+
+/*HomePage */
+
+.heading-one{
+	font-size: 80px;
+    font-weight: bolder;
+    font-family: Pincoyablack;
+    padding: 30px 0px 0px 10px;
+  	color: #CCFF00;
+  	text-align: left;
+}
+.heading-two{
+	font-size: 80px;
+    font-weight: bolder;
+    font-family: Pincoyablack;
+    padding: 0px 10px 0px 15px;
+  	color: #CCFF00;
+    text-align: right;
+}
+.heading-three{
+	font-size: 75px;
+    font-weight: bolder;
+    font-family: Pincoyablack;
+    padding: 0px 0px 0px 10px;
+    color: transparent;
+    -webkit-text-stroke: 1px #CCFF00;
+    text-align: left;
+}
+.heading-four{
+	font-size: 75px;
+    font-weight: bolder;
+    font-family: Pincoyablack;
+    padding: 0px 10px 15px 0px;
+ 	color: transparent;
+    -webkit-text-stroke: 1px #CCFF00;
+  	text-align: right;
+}
+.and-sign{
+	font-size: 140px;
+	font-weight: bolder;
+	font-family: Lato;
+	color: transparent;
+    -webkit-text-stroke: 1.5px #CCFF00;
+	text-align: left;
+	padding: 15px 0px 20px 0px;
+	transform: rotate(-12deg);
+}
+.paragraph-home{
+	font-size: 12px;
+    font-family: Lato;
+    float: right;
+   /* padding: 110px 350px 0px 140px;*/
+   padding: 10px 10px;
+}
+
+.here-title{
+ 	color: #CCFF00;
+ 	font-family: Lato;
+ 	text-decoration: none;
+ }
+ .column-container-home{
+ 	 /*display: block;*/
+ }
+.column-left{
+    float: left;
+    flex: 1 1 auto;
+   
+ }
+ .column-right{
+    float: right;
+   /*padding: 25px 0px 0px 0px;*/
+    flex: 1 1 auto;
+ }
+
+/*.column-container-contact{
+    display: flex;
+
+ }*/
+ 
+.project-title{
+	font-weight: bold;
+	font-family: Lato;
+	font-size: 25px;
+	text-align: center;
+	color: white;
+	padding-top: 70px;
+}
+.contact-section{
+     font-size: 80px;
+    font-weight: bolder;
+    font-family: Pincoyablack;
+    text-align: center;
+    padding: 110px 0px 110px 0px;
+    background: linear-gradient(to bottom, #D0FB21, #9AFA12, #39EE04);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: black;
+}
+.social-twitter{
+    font-size: 14px;
+    font-family: Lato;
+    padding: 0px 20px 20px 20px;
+     font-weight: bold;
+     flex: 1 1 auto;
+     color: white;
+
+}
+
+.social-behance{
+    font-size: 14px;
+    font-family: Lato;
+    padding: 0px 20px 20px 20px;
+     font-weight: bold;
+     flex: 1 1 auto;
+      color: black;
+
+}
+
+.social-email{
+    font-size: 14px;
+    font-family: Lato;
+    padding: 0px 20px 20px 20px;
+    font-weight: bold;
+    flex: 1 1 auto;
+    color: black;
+
+}
+
+.box{
+    display: flex;
+    justify-content: center;
+}
+
 
 }
 
@@ -789,14 +1033,21 @@ h3{
     position: absolute;
 
 }
-
-.bar{
+.bar1{
 	width: 30px;
 	height: 3px;
-	background-color: #FFFFFF;
+	background-color: white;
 	margin: 5px;
 	padding: 0px;
 
+	}
+	.bar2{
+	width: 30px;
+	height: 3px;
+	background-color: white;
+	margin: 5px;
+	padding: 0px;
+	/*transform: rotate(90deg);*/
 	}
 		
 
@@ -811,7 +1062,7 @@ h3{
 
 		ul li a:hover{
 		color: #CCFF00;
-		-webkit-text-stroke : 1px white;
+		-webkit-text-stroke : 1px #CCFF00;
 		transition: 0.5s;
 	}
 		
@@ -819,8 +1070,8 @@ h3{
 	.hamburger-menu{
 			position: absolute;
 			cursor: pointer;
-			top: 17px;
-			right: 3%;
+			top: 1.2%;
+			right: 1.5%;
 			transform: translate(20%, -40%);
 			z-index: 11;
 			margin:auto;
@@ -848,9 +1099,22 @@ h3{
 			flex-flow: column-reverse;
 
 		}
-		li a:hover:not(.current-link){
+		/*li a:hover:not(.current-link){
     background-color: #CCFF00;
+}*/
+.logo{
+	width: 50px;
+	height: auto;
+	padding: 0px;
+	
 }
+.logo-img{
+	width: 50px;
+	height: auto;
+	padding: 0px;
+	
+}
+
 
 /*Blog Page Section*/
 .line{
@@ -1060,9 +1324,141 @@ h3{
     font-size: 15px;
 }
 .image-mock{
-	height: 690px;
+	height: 400px;
 	background-color: grey;
 	padding: 0px;
+}
+
+/*HomePage */
+
+.heading-one{
+	font-size: 190px;
+    font-weight: bolder;
+    font-family: Pincoyablack;
+    padding: 30px 0px 0px 15px;
+  	color: #CCFF00;
+  	text-align: left;
+}
+.heading-two{
+	font-size: 190px;
+    font-weight: bolder;
+    font-family: Pincoyablack;
+    padding: 0px 15px 0px 15px;
+  	color: #CCFF00;
+    text-align: right;
+}
+.heading-three{
+	font-size: 190px;
+    font-weight: bolder;
+    font-family: Pincoyablack;
+    padding: 0px 15px 0px 15px;
+    color: transparent;
+    -webkit-text-stroke: 1.5px #CCFF00;
+    text-align: left;
+}
+.heading-four{
+	font-size: 190px;
+    font-weight: bolder;
+    font-family: Pincoyablack;
+    padding: 0px 15px 15px 0px;
+ 	color: transparent;
+    -webkit-text-stroke: 1.5px #CCFF00;
+  	text-align: right;
+}
+.and-sign{
+	font-size: 400px;
+	font-weight: bolder;
+	font-family: Lato;
+	color: transparent;
+    -webkit-text-stroke: 1.5px #CCFF00;
+	text-align: left;
+	padding: 0px 20px 0px 5px;
+	transform: rotate(-12deg);
+}
+.paragraph-home{
+	font-size: 18px;
+    font-family: Lato;
+    float: right;
+    padding: 50px 150px 0px 15px;
+}
+
+.here-title{
+ 	color: #CCFF00;
+ 	font-family: Lato;
+ 	text-decoration: none;
+ }
+ .column-container-home{
+ 	 display: flex;
+ }
+.column-left{
+    float: left;
+    flex: 1 1 auto;
+   
+ }
+ .column-right{
+    float: right;
+   /*padding: 25px 0px 0px 0px;*/
+    flex: 1 1 auto;
+ }
+
+.column-container-contact{
+    display: flex;
+
+ }
+ 
+.project-title{
+	font-weight: bold;
+	font-family: Lato;
+	font-size: 60px;
+	text-align: center;
+	color: white;
+	padding-top: 70px;
+}
+.contact-section{
+     font-size: 180px;
+    font-weight: bolder;
+    font-family: Pincoyablack;
+    text-align: center;
+    padding: 150px 0px 150px 0px;
+    background: linear-gradient(to bottom, #D0FB21, #9AFA12, #39EE04);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: black;
+}
+.social-twitter{
+    font-size: 16px;
+    font-family: Lato;
+    padding: 0px 20px 20px 20px;
+     font-weight: bold;
+     flex: 1 1 auto;
+     color: white;
+
+}
+
+.social-behance{
+    font-size: 16px;
+    font-family: Lato;
+	padding: 0px 20px 20px 20px;
+     font-weight: bold;
+     flex: 1 1 auto;
+      color: black;
+
+}
+
+.social-email{
+    font-size: 16px;
+    font-family: Lato;
+	padding: 0px 20px 20px 20px;
+    font-weight: bold;
+    flex: 1 1 auto;
+    color: black;
+
+}
+
+.box{
+    display: flex;
+    align-items: center;
+	justify-content: center;
 }
 
 }
